# pdf2md

./: README.md  pyproject.toml
sample/: main.py
src/pdf2md/: __init__.py  chatgpt.py  convert_markdown.py  read_pdf.py
