[project]
name = "pdf2md"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shunichi0402", email = "shunichi_nikoniko@yahoo.co.jp" }
]
dependencies = [
    "openai>=1.77.0",
    "pymupdf>=1.25.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]
